First version of freebase relation builder

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ Proposal/ijcai*.pdf
 Proposal/proposal_final.pdf
 *.synctex
 *.pyc
+Proposal/ijcai15- feature generation by recursive induction.synctex.gz
+Proposal/ijcai15- feature generation by recursive induction.tex.bak
