--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ Proposal/proposal_final.pdf
 *.pyc
 Proposal/ijcai15- feature generation by recursive induction.synctex.gz
 Proposal/ijcai15- feature generation by recursive induction.tex.bak
+Proposal/jair_paper/jair paper.synctex.gz
+Proposal/jair_paper/Thumbs.db
