logging does nothing. messed with params a bit. TODO: SQL

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ Proposal/ijcai15- feature generation by recursive induction.synctex.gz
 Proposal/ijcai15- feature generation by recursive induction.tex.bak
 Proposal/jair_paper/jair paper.synctex.gz
 Proposal/jair_paper/Thumbs.db
+problems/run_log_rec0_0.txt
+*.pkl
